0.12.1/_sources/modules/numba.targets.txt
numba.targets package
=====================

Submodules
----------

numba.targets.base module
-------------------------

.. automodule:: numba.targets.base
    :members:
    :undoc-members:
    :show-inheritance:

numba.targets.builtins module
-----------------------------

.. automodule:: numba.targets.builtins
    :members:
    :undoc-members:
    :show-inheritance:

numba.targets.cpu module
------------------------

.. automodule:: numba.targets.cpu
    :members:
    :undoc-members:
    :show-inheritance:

numba.targets.descriptors module
--------------------------------

.. automodule:: numba.targets.descriptors
    :members:
    :undoc-members:
    :show-inheritance:

numba.targets.imputils module
-----------------------------

.. automodule:: numba.targets.imputils
    :members:
    :undoc-members:
    :show-inheritance:

numba.targets.intrinsics module
-------------------------------

.. automodule:: numba.targets.intrinsics
    :members:
    :undoc-members:
    :show-inheritance:

numba.targets.mathimpl module
-----------------------------

.. automodule:: numba.targets.mathimpl
    :members:
    :undoc-members:
    :show-inheritance:

numba.targets.npyimpl module
----------------------------

.. automodule:: numba.targets.npyimpl
    :members:
    :undoc-members:
    :show-inheritance:

numba.targets.options module
----------------------------

.. automodule:: numba.targets.options
    :members:
    :undoc-members:
    :show-inheritance:

numba.targets.registry module
-----------------------------

.. automodule:: numba.targets.registry
    :members:
    :undoc-members:
    :show-inheritance:


Module contents
---------------

.. automodule:: numba.targets
    :members:
    :undoc-members:
    :show-inheritance:
